--- a/docker/makefile
+++ b/docker/makefile
@@ -1,7 +1,10 @@
 CONTAINER_DATA_PATHNAME=/home/postgres/data
-CONTAINER_DB_DUMP_FILE_PATHNAME=$(CONTAINER_DATA_PATHNAME)/db-export.sql
+DB_DUMP_FILE_NAME=db-export.sql
+CONTAINER_DB_DUMP_FILE_PATHNAME=$(CONTAINER_DATA_PATHNAME)/$(DB_DUMP_FILE_NAME)
+LOCAL_DB_DUMP_FILE_PATHNAME=/tmp/$(DB_DUMP_FILE_NAME)
 CONTAINER_NAME=postgres-container
 CONTAINER_VOLUME=db_postgres
+DATABASE_NAME=contacts
 IMAGE_NAME=postgres
 IMAGE_VERSION=15.2
 POSTGRES_USER=postgres
@@ -32,11 +35,25 @@ connect-psql:
 	docker exec -it $(CONTAINER_NAME) psql -U $(POSTGRES_USER)
 
 export-db:
-	echo "[DEBUG] Init dump database"
+	# Init dump database
 	docker exec $(CONTAINER_NAME) \
-		pg_dump -U postgres -d contacts -f $(CONTAINER_DB_DUMP_FILE_PATHNAME)
-	echo "[DEBUG] Init export dumped database"
-	docker cp $(CONTAINER_NAME):$(CONTAINER_DB_DUMP_FILE_PATHNAME) /tmp
+		pg_dump -U $(POSTGRES_USER) -d $(DATABASE_NAME) -f $(CONTAINER_DB_DUMP_FILE_PATHNAME)
+	# Init export dumped database
+	docker cp $(CONTAINER_NAME):$(CONTAINER_DB_DUMP_FILE_PATHNAME) $(LOCAL_DB_DUMP_FILE_PATHNAME)
+
+import-db:
+	# Init import database
+	# Init drop database
+	docker exec -it $(CONTAINER_NAME) \
+		psql -U $(POSTGRES_USER) -c "DROP DATABASE IF EXISTS $(DATABASE_NAME);"
+	# Init create database
+	docker exec -it $(CONTAINER_NAME) \
+		psql -U $(POSTGRES_USER) -c "CREATE DATABASE $(DATABASE_NAME);"
+	# Copy dumped database file to the container
+	docker cp  $(LOCAL_DB_DUMP_FILE_PATHNAME) $(CONTAINER_NAME):$(CONTAINER_DB_DUMP_FILE_PATHNAME)
+	# Init import database
+	docker exec -it $(CONTAINER_NAME) \
+		psql -U $(POSTGRES_USER) --set ON_ERROR_STOP=on -f $(CONTAINER_DB_DUMP_FILE_PATHNAME) $(DATABASE_NAME)
 
 stop:
 	docker stop $(CONTAINER_NAME)
